[#31032] Fix spacing between form items.

--- a/themes/agov/agov_whitlam/sass/components/form-item/_form-item.scss
+++ b/themes/agov/agov_whitlam/sass/components/form-item/_form-item.scss
@@ -28,7 +28,7 @@
 
 .form-item,
 %form-item {
-  margin-bottom: 15px;
+  margin-bottom: 36px;
 
   // The part of the label that indicates a required field.
   &__required {
